Fixed nav overlapping scrollbar on Costumes page

--- a/1800clothing/carma/templates/scss/_large.scss
+++ b/1800clothing/carma/templates/scss/_large.scss
@@ -6,6 +6,10 @@
     min-height: calc(100vh - 45px);
 }
 
+.body{
+    overflow: initial;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
